force-app/main/default/objects/Enrichment_Request__c/Enrichment_Request__c.object-meta.xml
<CustomObject>
    <description>Queue of enrichment requests raised by automated flows. Drained by the Amplemarket automated enrichment job, which runs as the admin who enabled it — so the user who triggered the flow needs no Amplemarket permissions.</description>
    <label>Enrichment Request</label>
    <nameField>
        <displayFormat>ER-{0000000}</displayFormat>
        <label>Enrichment Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrichment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>