force-app/main/default/objects/Enrichment_Request__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <description>Why the request failed, when Status is Failed.</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>