force-app/main/default/objects/Enrichment_Request__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <description>Lead, Contact, or Account.</description>
    <length>80</length>
    <type>Text</type>
</CustomField>