force-app/main/default/objects/Enrichment_Request__c/fields/Processed_At__c.field-meta.xml
<CustomField>
    <fullName>Processed_At__c</fullName>
    <label>Processed At</label>
    <description>When the automated enrichment job finished this request.</description>
    <type>DateTime</type>
</CustomField>