force-app/main/default/objects/Enrichment_Request__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <description>Id of the Lead, Contact, or Account to enrich.</description>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>