force-app/main/default/objects/Enrichment_Request__c/fields/Reveal_Email__c.field-meta.xml
<CustomField>
    <fullName>Reveal_Email__c</fullName>
    <label>Reveal Email Override</label>
    <description>"true" or "false" to override the configured reveal-email default. Blank uses the Amplemarket Settings default.</description>
    <length>5</length>
    <type>Text</type>
</CustomField>