force-app/main/default/objects/Enrichment_Request__c/fields/Reveal_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reveal_Phone__c</fullName>
    <label>Reveal Phone Override</label>
    <description>"true" or "false" to override the configured reveal-phone default. Blank uses the Amplemarket Settings default.</description>
    <length>5</length>
    <type>Text</type>
</CustomField>